Revert "Merge branch 'fix/z-index-remind-button-4124' into 'master'"
This reverts merge request !1272

--- a/src/app/modules/newsfeed/activity/remind-button/remind-button.component.ng.scss
+++ b/src/app/modules/newsfeed/activity/remind-button/remind-button.component.ng.scss
@@ -1,10 +1,6 @@
 @import 'defaults.scss';
 
 :host {
-  .m-dropdown--v2 {
-    z-index: 1;
-  }
-
   .m-activityRemindButton__icon {
     padding: 0;
     border: 0;
